# ansi-diff.rs

./: Cargo.toml  readme.md
examples/: colors.rs  resize.rs  time.rs
src/: lib.rs
tests/: diff.rs  split.rs
