[package]
name = "ansi-diff"
version = "1.0.0"
description = "diff successive buffers with embedded ansi codes, outputting a minimal change"
edition = "2021"
license = "bsd-2-clause"
readme = "readme.md"
repository = "https://github.com/substack/ansi-diff.rs"
homepage = "https://github.com/substack/ansi-diff.rs"
documentation = "https://docs.rs/ansi-diff"

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
term_size = "0.3.2"
signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" ] }
